2008-06-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_margin) src/save.c (save_set_all) docs/gnuplot.doc:
	Add keyword "at" to absolute margin placement commands.
	The full form is now "set rmargin {at screen} 0.8".

2008-06-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics):  Interpret tic labels read from a data file as
	string constants rather than as formats.  Otherwise there are problems
	with labels containing the "%" character.

2008-06-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c (store_polygon) src/mouse.c (event_motion):
	Replace a pair of assert() statements with a flag that prevents mouse
	interaction from further increasing the value of surface_zscale. This
	means you cannot trigger the error condition the asserts tried to guard
	against by moving the mouse.  You can still trigger it by setting the
	view to something unreasonable, but the previous patch may handle that.
	Bug #1728063

2008-06-02  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/hidden3d.c (sort_polys_by_z in_front coord_to_treecell):
	Add range-checks to the calculation of quadtree array indices.
	Bugs #1969415 #1728063

2008-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tables.c src/tables.h src/show.c:  'show colornames'.

2008-05-31  Allin Cottrell <cottrell@wfu.edu>

	* term/metapost.trm (MP_filled_polygon):  Limit the number of vertices
	per line of output.

2008-05-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (make_tics):  Don't generate tics for an empty axis range.

2008-05-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c (TextInit), src/win/wgraph.c (GraphInit):
	Increase buffer sizes which contain the path to wgnuplot.ini.  Fixes
	crashes on systems with very long paths of the %APPDATA% directory.

2008-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample): Do not draw errorbars on candlestick
	key sample.
